ce970229377e5a51e7a406aa23d4681073a44adf Examples: Initial dark mode work - incomplete! Fix: input and select elements added by DataTables should inhert their color
Sync to source repo @ce970229377e5a51e7a406aa23d4681073a44adf

--- a/css/dataTables.jqueryui.css
+++ b/css/dataTables.jqueryui.css
@@ -473,6 +473,7 @@ table.dataTable td {
   border-radius: 3px;
   padding: 5px;
   background-color: transparent;
+  color: inherit;
   padding: 4px;
 }
 .dataTables_wrapper .dataTables_filter {
@@ -484,6 +485,7 @@ table.dataTable td {
   border-radius: 3px;
   padding: 5px;
   background-color: transparent;
+  color: inherit;
   margin-left: 3px;
 }
 .dataTables_wrapper .dataTables_info {
